# proyecto1

./: CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  blink_example_main.c  bmi270.c
